app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --link-color: #cbf55c;
  --background-color: #400073;
}

.links-flex .active {
  color: var(--link-color);
  font-weight: bold;
  border-bottom: 2px solid var(--link-color);
}

.animate-loading {
  animation: pulseAndRotate 2.75s ease infinite;
}

.generate-playlists-top .artist-container,
.generate-playlists-top .track-container,
.recommendation-container {
  transition: all 0.25s ease;
}

.generate-playlists-top .artist-container:hover,
.generate-playlists-top .track-container:hover,
.recommendation-container:hover {
  background-color: var(--background-color);
}

.generate-playlists-top .artist-container:hover .artist-name h1,
.generate-playlists-top .track-container:hover .track-name h1,
.recommendation-container:hover .track-name h1 {
  color: white;
}

.generate-playlists-top .artist-container:hover .artist-options svg g,
.generate-playlists-top .track-container:hover .track-options svg g,
.recommendation-container:hover .track-options svg g {
  color: white;
  fill: white;
}

.modal-container {
  transition: all 0.25s ease;
}

.modal-open {
  transform: translateY(0%);
  margin-top: 16px;
}

.modal-closed {
  transform: translateY(200%);
  display: none;
}

.selected-modal {
  padding-bottom: 8px;
}

.selected-modal::-webkit-scrollbar-track,
.top-tracks::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  background-color: #d7dbff;
}

.selected-modal::-webkit-scrollbar,
.top-tracks::-webkit-scrollbar {
  height: 8px;
  background-color: #d7dbff;
}

.selected-modal::-webkit-scrollbar-thumb,
.top-tracks::-webkit-scrollbar-thumb {
  background-color: #c5ff25;
  background-image: -webkit-linear-gradient(
    45deg,
    rgba(255, 255, 255, 0.2) 25%,
    transparent 25%,
    transparent 50%,
    rgba(255, 255, 255, 0.2) 50%,
    rgba(255, 255, 255, 0.2) 75%,
    transparent 75%,
    transparent
  );
}

.modal-container .roll-over {
  transition: all 0.25s ease;
}

.pagination-header div {
  cursor: pointer;
  transition: all 0.25s ease;
}

.pagination-header .active {
  background-color: var(--background-color);
  font-weight: bold;
}

.pagination-header .active svg g {
  fill: #fff;
}

.pagination-header div:hover {
  background-color: var(--background-color);
}

.pagination-header div:hover svg g {
  fill: #fff;
}

.pagination-header div.disabled {
  pointer-events: none;
}

.recommendations-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.up-button {
  transition: all 0.25s ease;
}

.privacy input[type="radio"] {
  appearance: none;
  border: 2px solid var(--background-color);
  border-radius: 50%;
  padding: 4px;
  transition: all 0.25s ease;
}

.privacy input[type="radio"]:checked {
  background-color: var(--background-color);
}

.privacy input[type="radio"]:hover {
  background-color: var(--background-color);
}

.hamburger-icon {
  width: 30px;
  height: 22.5px;
  object-fit: contain;
  position: relative;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.5s ease-in-out;
  -moz-transition: 0.5s ease-in-out;
  -o-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
  cursor: pointer;
}

.hamburger-icon span {
  display: block;
  position: absolute;
  height: 4.5px;
  width: 100%;
  background: white;
  border-radius: 9px;
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  -moz-transition: 0.25s ease-in-out;
  -o-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.hamburger-icon span:nth-child(1) {
  top: 0px;
}

.hamburger-icon span:nth-child(2),
.hamburger-icon span:nth-child(3) {
  top: 9px;
}

.hamburger-icon span:nth-child(4) {
  top: 18px;
}

.hamburger-icon.open span:nth-child(1) {
  top: 9px;
  width: 0%;
  left: 50%;
}

.hamburger-icon.open span:nth-child(2) {
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  transform: rotate(45deg);
}

.hamburger-icon.open span:nth-child(3) {
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  -o-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.hamburger-icon.open span:nth-child(4) {
  top: 9px;
  width: 0%;
  left: 50%;
}

@keyframes pulseAndRotate {
  0% {
    transform: rotate(0deg);
    opacity: 1;
  }
  25% {
    transform: rotate(45deg);
    opacity: 0.5;
  }
  50% {
    transform: rotate(0deg);
    opacity: 1;
  }
  75% {
    transform: rotate(-45deg);
    opacity: 0.5;
  }
  100% {
    transform: rotate(0deg);
    opacity: 1;
  }
}

@media (max-width: 768px) {
  .links-flex,
  .profile-container {
    display: none;
  }

  .top-tracks,
  .top-artists {
    width: 90%;
  }

  .tracks-container,
  .artists-container {
    overflow-x: auto;
    justify-content: flex-start;
  }

  .top-tracks h1,
  .top-artists h1,
  .playlists-inner-container h1 {
    font-size: 1.25rem;
  }
}

@media (min-width: 768px) {
  .hamburger-menu {
    display: none;
  }
}

@media (max-width: 850px) {
  .recommendations-container {
    grid-template-columns: 1fr;
    padding: 0;
    margin-left: auto;
    margin-right: auto;
  }

  .tracks-artists-container {
    flex-direction: column;
    width: fit-content;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (max-width: 500px) {
  .select-time-range {
    flex-direction: column;
  }

  .selected-items {
    flex-direction: column;
    gap: 8px;
  }

  .continue-button {
    margin-left: 0;
  }

  .selected-info {
    margin-right: 0;
  }

  .no-artists p,
  .no-tracks p {
    text-align: start;
  }
}

@media (max-width: 1200px) {
  .top-artists .artists-container,
  .top-tracks .tracks-container {
    gap: 1.5rem;
  }

  .top-artists .artist-image-container,
  .top-tracks .track-image-container {
    width: 8rem;
    height: 8rem;
  }

  .top-artists .artist-container h1,
  .top-tracks .track-container h1 {
    width: 8rem;
  }
}

